--- a/CPSC233Project/.classpath
+++ b/CPSC233Project/.classpath
@@ -12,4 +12,24 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.base.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.graphics.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.controls.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="JavaFX13/lib/javafx.web.jar"/>
 </classpath>
