--- a/CPSC233Project/.classpath
+++ b/CPSC233Project/.classpath
@@ -6,25 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.base.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX13">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.graphics.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.controls.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="JavaFX13/lib/javafx.web.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
