--- a/CPSC233Project/.classpath
+++ b/CPSC233Project/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
 	<classpathentry kind="lib" path="openjfx/rt/lib/ext/jfxrt.jar"/>
+	<classpathentry kind="lib" path="junit4/junit-4.13.jar"/>
+	<classpathentry kind="lib" path="junit4/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
